tests/negative/generic_errors/undefined_variable.nano
# Expected Error: Undefined variable

fn main() -> int {
    let x: int = 5
    return y  # Error: y is not defined
}

shadow main {
    assert (== (main) 0)
}
